Prevent sw-page content wrapper clipping

--- a/custom/plugins/ExternalOrders/src/Resources/app/administration/src/module/external-orders/page/external-orders-list/external-orders-list.scss
+++ b/custom/plugins/ExternalOrders/src/Resources/app/administration/src/module/external-orders/page/external-orders-list/external-orders-list.scss
@@ -1,4 +1,11 @@
 .external-orders {
+    :global(.sw-page__main-content-inner) {
+        position: relative;
+        height: auto;
+        min-height: 100%;
+        overflow: visible;
+    }
+
     &__channels {
         margin-bottom: 24px;
     }
